# bds-data-scraper

./: .gitignore  CMakeLists.txt
cmake/: Dependencies.cmake
sdk/include/modloader/: hook.h  loader.h  log.h
src/: json.hpp  main.cpp
src/api/: Api.cpp  Api.h  ApiObject.cpp  ApiObject.h  SharedCounter.h  SharedPtr.h  WeakPtr.h
src/api/event/: GenericHooks.cpp  PlayerEventHooks.cpp
src/api/server/: Server.cpp  Server.h
v8/include/: v8-inspector.h  v8-internal.h  v8-platform.h  v8-profiler.h  v8-util.h  v8-wasm-trap-handler-posix.h  v8-wasm-trap-handler-win.h  v8.h
v8/include/libplatform/: libplatform.h  v8-tracing.h
v8pp/v8pp/: call_from_v8.hpp  call_v8.hpp  class.cpp  class.hpp  class.ipp  config.hpp  context.cpp  context.hpp  convert.cpp  convert.hpp  factory.hpp  function.hpp  json.cpp  json.hpp  json.ipp  module.hpp  object.hpp  persistent.hpp  property.hpp  ptr_traits.hpp  throw_ex.cpp  throw_ex.hpp  throw_ex.ipp  utility.hpp
